--- a/cloud-config-repo/cloud-config-dev.properties
+++ b/cloud-config-repo/cloud-config-dev.properties
@@ -2,3 +2,4 @@ mysqldb.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/mysql?useUnicode\=true&cha
 mysqldb.datasource.username=gaoxiexin
 mysqldb.datasource.password=871190
 logging.level.org.springframework.web:DEBUG
+foo=user
